--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ span{
 }
 
 .typing-text span::before{
-    content: "Beta Tester";
+    content: "Developer";
     color: #b74b4b;
     animation: words 20s infinite;
 }
@@ -267,5 +267,6 @@ span{
         margin-top: 4rem;
     }
 }
+
 
 
